[gd_scene load_steps=3 format=3 uid="uid://cc6awakg6tvwj"]

[ext_resource type="Script" uid="uid://dbqv8878duaf0" path="res://Tower.gd" id="1_cvrs4"]
[ext_resource type="Texture2D" uid="uid://djndrtbre5qli" path="res://Assets/Tower.png" id="2_bn6qc"]

[node name="Tower" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvrs4")

[node name="Tower" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 309.0
offset_bottom = 513.0
texture = ExtResource("2_bn6qc")

[node name="FloorsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 21.5
offset_right = 404.0
offset_bottom = 472.5

[node name="Floor14" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR13"

[node name="Floor12" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR12"

[node name="Floor11" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR11"

[node name="Floor10" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR10"

[node name="Floor9" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR9"

[node name="Floor8" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR8"

[node name="Floor7" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR7"

[node name="Floor6" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR6"

[node name="Floor5" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR5"

[node name="Floor4" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR4"

[node name="Floor3" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR3"

[node name="Floor2" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR2"

[node name="Floor1" type="Button" parent="FloorsContainer"]
layout_mode = 2
text = "FLOOR1"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 949.0
offset_right = 989.0
offset_bottom = 23.0

[node name="FloorOptionsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 16.5
offset_right = 654.0
offset_bottom = 56.5

[node name="TrainingButton" type="Button" parent="FloorOptionsPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = 48.0
offset_right = 115.0
offset_bottom = 79.0
text = "Training Floor"

[node name="WorkButton" type="Button" parent="FloorOptionsPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 85.0
offset_right = 95.0
offset_bottom = 116.0
text = "Work Floor"

[node name="FloorInfoLabel" type="Label" parent="FloorOptionsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Floor Info Label"

[node name="InspectButton" type="Button" parent="FloorOptionsPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 122.0
offset_right = 75.0
offset_bottom = 153.0
text = "INSPECT"

[node name="ManageButton" type="Button" parent="FloorOptionsPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 157.0
offset_right = 74.0
offset_bottom = 188.0
text = "Manage"

[node name="FloorInspectionMode" type="Node2D" parent="."]
visible = false

[connection signal="pressed" from="FloorOptionsPanel/TrainingButton" to="." method="_on_training_button_pressed"]
[connection signal="pressed" from="FloorOptionsPanel/WorkButton" to="." method="_on_work_button_pressed"]
[connection signal="pressed" from="FloorOptionsPanel/InspectButton" to="." method="_on_inspection_button_pressed"]
